# logi_orchestrator

./: .env.example  .gitignore  .pre-commit-config.yaml  20260322_PLAN_DOC_v1.md  20260322_PR01_plan_v1.md  20260322_upgrade_scout_report_v1.md  AGENTS.md  CLAUDE.md  DELIVERY_NOTE.md  README.md  apply_docs.patch  messages.html  prompt_plan.md  pyproject.toml  requirements.txt  spec.md
app/: config.py  main.py
app/api/routes/: health.py  jobs.py  telegram.py
app/core/: enums.py  exceptions.py
app/infra/: filesystem.py  git_worktree.py  storage.py
app/schemas/: job.py  telegram.py
app/services/: acl.py  audit.py  command_parser.py  job_service.py  state_machine.py
app/workers/: agent_resolver.py  queue.py  worker.py
config/: acl.yaml
ops/orchestrator/: EVAL.md  PLAN.md  RUNBOOK.md  TASKS.yaml  orchestrator_state_machine.md  telegram_command_spec.md
tests/: conftest.py  test_agent_orchestration.py  test_parser.py  test_state_machine.py
